# rust-server-example

./: .env.example  .gitignore  Cargo.toml  README.md
configuration/: base.toml
postgres_migrations/: 1_create_users_table.down.sql  1_create_users_table.up.sql
src/application/: Cargo.toml
src/application/src/: configuration.rs  lib.rs  main.rs
src/db/: Cargo.toml
src/db/src/: connection.rs  lib.rs
src/db/src/users/: mapper.rs  mod.rs  query.rs
src/db/tests/: users.rs
src/db/tests/helpers/: mod.rs
src/domain/: Cargo.toml
src/domain/src/: errors.rs  lib.rs  repository.rs
src/domain/src/user_password/: errors.rs  mod.rs  models.rs
src/domain/src/user_status/: errors.rs  models.rs
src/domain/src/users/: errors.rs  mod.rs  models.rs  repository.rs
src/integration_testing/: Cargo.toml
src/integration_testing/tests/: integration_test.rs
src/repository/: Cargo.toml
src/repository/src/: lib.rs  repository.rs  users.rs  users_repository.rs  utils.rs
src/web/: Cargo.toml
src/web/src/: http_server.rs  lib.rs  request_ext.rs  response_error.rs  state.rs  token.rs
src/web/src/graphql/: actions.rs  mod.rs  model.rs
src/web/src/others/: mod.rs  myip.rs  server_ip.rs
src/web/src/users/: mod.rs  response_bodies.rs  sign_in.rs  sign_up.rs  update_profile.rs
