[package]
name = "web"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[lib]
name = "web"
path = "src/lib.rs"

[dependencies]
tide = "0.6.0"
log = "0.4.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
surf = "1.0.3"
serde_json = "1.0.51"
repository = { path = "../repository" }
jsonwebtoken = "7.1.0"
chrono = { version = "0.4.11", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.28"
